--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
-        "phpoffice/phpspreadsheet": "^1.16"
+        "laravelcollective/html": "^6.2",
+        "phpoffice/phpspreadsheet": "^1.16",
+        "spatie/laravel-permission": "^5.1"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
