--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.2",
         "phpoffice/phpspreadsheet": "^1.16",
-        "spatie/laravel-permission": "^5.1"
+        "spatie/laravel-permission": "^5.1",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
