--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
+        "laravel/ui": "*",
         "laravelcollective/html": "^6.2",
         "phpoffice/phpspreadsheet": "^1.16",
         "spatie/laravel-permission": "^5.1",
@@ -23,7 +24,6 @@
     "require-dev": {
         "facade/ignition": "^2.0",
         "fakerphp/faker": "^1.9.1",
-        "laravel/ui": "^2.5",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.3",
         "phpunit/phpunit": "^8.5.8|^9.3.3",
