--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
 
   #PHP Service
-  app:
+  b1ex-app:
     build:
       context: .
       dockerfile: Dockerfile
@@ -21,7 +21,7 @@ services:
       - app-network
 
   #Nginx Service
-  webserver:
+  b1ex-webserver:
     image: nginx:alpine
     container_name: webserver
     restart: unless-stopped
