--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - ./:/var/www
       - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
-      - app-network
+      - b1ex-app-network
 
   #Nginx Service
   b1ex-webserver:
@@ -32,10 +32,10 @@ services:
       - ./:/var/www
       - ./nginx/conf.d/:/etc/nginx/conf.d/
     networks:
-      - app-network
+      - b1ex-app-network
 #Docker Networks
 networks:
-  app-network:
+  b1ex-app-network:
     driver: bridge
 #Volumes
 volumes:
