--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/ui": "*",
         "laravelcollective/html": "^6.2",
         "phpoffice/phpspreadsheet": "^1.16",
+        "predis/predis": "^2.1",
         "spatie/laravel-permission": "^5.1",
         "tymon/jwt-auth": "^1.0"
     },
